syntax = "proto3";

package orgs.v1.iam.v1;

import "google/protobuf/struct.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/orgs/v1/iam/v1";

message DeprovisionIAMRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"len=26\""
  ];
}

message DeprovisionIAMResponse {
  google.protobuf.Struct status = 1 [(tagger.tags) = "faker:\"-\""];
}
